Переверестан composite_make_ads

--- a/NewsTagil/src/main/res/layout-small/composite_make_ads_content.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_make_ads_content.xml
@@ -33,29 +33,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Добавить"
+                    android:text="@string/AddPhoto"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:textColor="#ff474747"
                     android:textSize="12dp"
                     android:id="@+id/textView"
                     android:layout_gravity="center"/>
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="#ff474747"
-
-                    android:layout_marginLeft="5dp"
-                    android:textSize="12dp"
-                    android:text="фото"
-                    android:id="@+id/textView"
-                    android:layout_gravity="center"/>
         </LinearLayout>
 
-        <LinearLayout
-                android:orientation="vertical"
+        <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|top">
@@ -68,16 +55,19 @@
                     android:layout_marginTop="10dp"
                     android:textColor="#ff474747"
                     android:textSize="12dp"
-                    android:id="@+id/textView2"
-                    android:layout_gravity="left|center_vertical"/>
+                    android:id="@+id/TitleTextView"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"/>
 
             <EditText
-                    android:layout_width="200dp"
+                    android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:layout_marginTop="3dp"
+                    android:layout_marginRight="20dp"
                     android:background="@drawable/massage_border_bg"
                     android:id="@+id/composite_make_ads_title"
-                    android:layout_gravity="left|center_vertical"/>
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/TitleTextView"/>
 
 
             <TextView
@@ -88,18 +78,23 @@
                     android:layout_marginTop="10dp"
                     android:textColor="#ff474747"
                     android:textSize="12dp"
-                    android:id="@+id/textView2"
-                    android:layout_gravity="left|center_vertical"/>
+                    android:id="@+id/ContentTextView"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/composite_make_ads_title"/>
 
             <EditText
-                    android:layout_width="200dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:minHeight="40dp"
                     android:background="@drawable/massage_border_bg"
                     android:inputType="textMultiLine"
                     android:ems="10"
+                    android:layout_marginRight="20dp"
                     android:id="@+id/composite_make_ads_content"
-                    android:layout_gravity="left|center_vertical"/>
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/ContentTextView"/>
 
             <Button
                     style="?android:attr/buttonStyleSmall"
@@ -108,11 +103,13 @@
                     android:textColor="#fffd8001"
                     android:background="@drawable/empty_bg"
                     android:text="Отправить"
-                    android:layout_marginLeft="100dp"
-                    android:id="@+id/composite_make_ads_sent"/>
+                    android:layout_marginRight="20dp"
+                    android:id="@+id/composite_make_ads_sent"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/composite_make_ads_content"/>
 
 
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
 
