--- a/NewsTagil/src/main/res/values/colors.xml
+++ b/NewsTagil/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="lightGray">#ccc9c3</color>
     <color name="Transparent">#00000000</color>
     <color name="Black">#000000</color>
+    <color name="Orange">#fffd8001</color>
 </resources>
