--- a/NewsTagil/src/main/res/layout-large/composite_make_ads_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_make_ads_content.xml
@@ -4,7 +4,9 @@
     android:layout_height="fill_parent"
     android:background="#ECE8E2"
    >
-
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -25,6 +27,7 @@
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginTop="10dp"
+                    android:scaleType="fitXY"
                     android:layout_marginLeft="10dp"
                     android:background="@drawable/massage_border_bg"
                     android:id="@+id/composite_make_ads_img"/>
@@ -117,5 +120,5 @@
 
         </RelativeLayout>
     </LinearLayout>
-
+</ScrollView>
 </RelativeLayout>
