--- a/NewsTagil/src/main/res/layout-small/composite_make_ads_content.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_make_ads_content.xml
@@ -4,7 +4,9 @@
     android:layout_height="fill_parent"
     android:background="#ECE8E2"
    >
-
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -24,6 +26,7 @@
             <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:scaleType="fitXY"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:background="@drawable/massage_border_bg"
@@ -112,6 +115,6 @@
         </RelativeLayout>
     </LinearLayout>
 
-
+</ScrollView>
 
 </RelativeLayout>
