--- a/NewsTagil/src/main/res/layout/composite_make_ads_content.xml
+++ b/NewsTagil/src/main/res/layout/composite_make_ads_content.xml
@@ -4,7 +4,9 @@
     android:layout_height="fill_parent"
     android:background="#ECE8E2"
    >
-
+<ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -27,6 +29,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:background="@drawable/massage_border_bg"
+                    android:scaleType="fitXY"
                     android:id="@+id/composite_make_ads_img"/>
 
             <TextView
@@ -118,5 +121,5 @@
     </LinearLayout>
 
 
-
+</ScrollView>
 </RelativeLayout>
