--- a/NewsTagil/src/main/res/layout-large/composite_tape_preview.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_tape_preview.xml
@@ -18,7 +18,7 @@
                 android:orientation="vertical"
                 android:layout_marginLeft="15dp"
                 android:layout_width="110dp"
-                android:layout_height="50dp">
+                android:layout_height="wrap_content">
 
             <TextView
                     android:layout_width="fill_parent"
