--- a/NewsTagil/src/main/res/layout-small/composite_tape_content.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_tape_content.xml
@@ -58,7 +58,7 @@
                     android:id="@+id/composite_tape_content_img">
 
             </ImageView>
-            <TextView
+            <ru.news.tagil.utility.myTextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:layout_marginTop="2dp"
