--- a/NewsTagil/src/main/res/layout-small/composite_tape_preview.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_tape_preview.xml
@@ -45,7 +45,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
 
-            <TextView
+            <ru.news.tagil.utility.myTextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:text="Реквием по бизнесу"
