--- a/NewsTagil/src/main/res/layout/composite_tape_preview.xml
+++ b/NewsTagil/src/main/res/layout/composite_tape_preview.xml
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="12dp"
                     android:textColor="#ff474747"
-                    android:text="    00:16"
+                    android:text="00:16"
                     android:id="@+id/composite_tape_preview_time"/>
 
         </LinearLayout>
@@ -45,7 +45,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
 
-            <TextView
+            <ru.news.tagil.utility.myTextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:text="Реквием по бизнесу"
