--- a/NewsTagil/src/main/res/values/colors.xml
+++ b/NewsTagil/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="Transparent">#00000000</color>
     <color name="Black">#000000</color>
     <color name="Orange">#fffd8001</color>
+    <color name="AppBackground">#ECE8E2</color>
 </resources>
