--- a/NewsTagil/src/main/res/layout/composite_setting_content.xml
+++ b/NewsTagil/src/main/res/layout/composite_setting_content.xml
@@ -31,15 +31,14 @@
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/linearLayout"
-            android:background="@drawable/border_img"
+            android:background="@drawable/bottom_border"
             android:layout_centerHorizontal="true"
             android:id="@+id/edge">
 
         <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
-                android:layout_marginLeft="25dp"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginLeft="@dimen/margin_left"
                 android:text="EDGE/3G"
                 android:textColor="#ff474747"
                 android:id="@+id/setting_content_edge"
@@ -50,16 +49,15 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
-            android:background="@drawable/border_img"
+            android:background="@drawable/bottom_border"
             android:layout_below="@+id/edge"
             android:layout_centerHorizontal="true"
             android:id="@+id/wifi">
 
         <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
-                android:layout_marginLeft="25dp"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginLeft="@dimen/margin_left"
                 android:text="WIFI"
                 android:textColor="#ff474747"
                 android:id="@+id/setting_content_wifi"
@@ -91,44 +89,45 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
-            android:background="@drawable/border_img"
+            android:background="@drawable/bottom_border"
             android:layout_below="@+id/linearLayout2"
             android:layout_centerHorizontal="true"
             android:id="@+id/linearLayout3">
 
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Настройка шрифтов"
                 android:textSize="16dp"
-                android:layout_marginTop="14dp"
-                android:layout_marginLeft="25dp"
                 android:textColor="#ff474747"
                 android:id="@+id/setting_content_font_setting"
-                android:layout_gravity="left"/>
+                android:textAlignment="gravity"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="@dimen/margin_left"
+                />
     </LinearLayout>
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
-            android:background="@drawable/border_img"
+            android:background="@drawable/bottom_border"
             android:layout_below="@+id/linearLayout3"
             android:layout_centerHorizontal="true">
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:textSize="16dp"
-                android:layout_marginLeft="25dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Справка"
                 android:textColor="#ff474747"
                 android:id="@+id/setting_content_FAQ"
-                android:layout_gravity="left"/>
+                android:textAlignment="gravity"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="@dimen/margin_left"/>
     </LinearLayout>
 
 
