--- a/NewsTagil/src/main/res/layout/composite_settings_fonts.xml
+++ b/NewsTagil/src/main/res/layout/composite_settings_fonts.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/AppBackground"
+        >
     <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -25,21 +26,80 @@
             android:id="@+id/font_type_linear"
             android:minHeight="10dp"
             >
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-                  </TextView>
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"></TextView>
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"></TextView>
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"></TextView>
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"></TextView>
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"></TextView>
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"></TextView>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fonts_settings_lay"
+                android:text="Шрифт 1"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:layout_marginRight="@dimen/margin_right"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical"
+                android:background="@drawable/bottom_border"
+                />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fonts_settings_lay"
+                android:text="Шрифт 2"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:layout_marginRight="@dimen/margin_right"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical"
+                android:background="@drawable/bottom_border"
+                />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fonts_settings_lay"
+                android:text="Шрифт 3"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:layout_marginRight="@dimen/margin_right"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical"
+                android:background="@drawable/bottom_border"
+                />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fonts_settings_lay"
+                android:text="Шрифт 4"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:layout_marginRight="@dimen/margin_right"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical"
+                android:background="@drawable/bottom_border"
+                />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fonts_settings_lay"
+                android:text="Шрифт 5"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:layout_marginRight="@dimen/margin_right"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical"
+                android:background="@drawable/bottom_border"
+                />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fonts_settings_lay"
+                android:text="Шрифт 6"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:layout_marginRight="@dimen/margin_right"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical"
+                android:background="@drawable/bottom_border"
+                />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fonts_settings_lay"
+                android:text="Шрифт 7"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:layout_marginRight="@dimen/margin_right"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical" />
     </LinearLayout>
     <RelativeLayout
             android:layout_width="fill_parent"
@@ -57,11 +117,60 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/fonts_settings_lay"
             android:id="@+id/font_size_linear"
-            android:minHeight="10dp"
+            android:background="@drawable/bottom_border"
             android:layout_below="@+id/relativeLayout2"
-            android:layout_alignParentLeft="true">
+            android:layout_marginTop="2dp"
+            android:weightSum="60">
+        <TextView   android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:text="3"
+                    android:layout_weight="10"
+                    android:textAlignment="gravity"
+                    android:gravity="center"
+                    android:textSize="12sp"
 
+                />
+        <TextView   android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:text="4"
+                    android:layout_weight="10"
+                    android:textAlignment="gravity"
+                    android:gravity="center"
+                    android:textSize="15sp"
+                />
+        <TextView   android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:text="5"
+                    android:layout_weight="10"
+                    android:textAlignment="gravity"
+                    android:gravity="center"
+                    android:textSize="18sp"
+                />
+        <TextView   android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:text="6"
+                    android:layout_weight="10"
+                    android:textAlignment="gravity"
+                    android:gravity="center"
+                    android:textSize="21sp"
+                />
+        <TextView   android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:text="7"
+                    android:layout_weight="10"
+                    android:textAlignment="gravity"
+                    android:gravity="center"
+                    android:textSize="24sp"
+                />
+        <TextView   android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:text="8"
+                    android:layout_weight="10"
+                    android:textAlignment="gravity"
+                    android:gravity="center"
+                    android:textSize="27sp"
+                />
     </LinearLayout>
 </RelativeLayout>
