--- a/NewsTagil/src/main/res/values/dimens.xml
+++ b/NewsTagil/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="xlarge_second_button_height">70pt</dimen>
     <dimen name="second_button_height">45dp</dimen>
+    <dimen name="fonts_settings_lay">45dp</dimen>
+    <dimen name="margin_left">10dp</dimen>
+    <dimen name="devault_size">15sp</dimen>
+    <dimen name="margin_right">10dp</dimen>
 </resources>
