--- a/NewsTagil/src/main/res/layout/composite_contact_preview.xml
+++ b/NewsTagil/src/main/res/layout/composite_contact_preview.xml
@@ -4,12 +4,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/AppBackground">
-    <ImageView android:layout_width="100dp"
-               android:layout_height="100dp"
+    <ImageView android:layout_width="50dp"
+               android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
+                android:background="@drawable/massage_border_bg"
                 android:id="@+id/composite_contact_preview_img">
                </ImageView>
 
