--- a/NewsTagil/src/main/res/layout/composite_header.xml
+++ b/NewsTagil/src/main/res/layout/composite_header.xml
@@ -155,6 +155,9 @@
                     android:layout_width="150dp"
                     android:layout_height="20dp"
                     android:layout_marginTop="2dp"
+                    android:lines="1"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
                     android:background="@drawable/first_header_search" >
 
                 </EditText>
