--- a/NewsTagil/src/main/res/layout/composite_message_in.xml
+++ b/NewsTagil/src/main/res/layout/composite_message_in.xml
@@ -1,52 +1,63 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#ece8e2"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/AppBackground"
    >
 
 
-    <LinearLayout
-            android:layout_width="fill_parent"
+    <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true">
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/composite_message_datetime_holder"
+            android:id="@+id/composite_message_text_holder"
+            android:background="@drawable/massage_left_bg"
+            >
 
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/massage_left_bg"
-                android:layout_gravity="center_horizontal|top">
 
             <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Кирил Прозоров"
-                    android:textColor="#ff474747"
-                    android:layout_marginLeft="5dp"
-                    android:id="@+id/composite_correspondence_massage_input_name_interlocutor"
-                    android:layout_gravity="left|center_vertical"/>
+                    android:textStyle="bold"
+                    android:id="@+id/composite_message_login"
+                 />
 
-            <TextView
-                    android:layout_width="wrap_content"
+            <ru.news.tagil.utility.myTextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text=" О тмшщуопщ ощищыуощшо ущшо уштмшмт шмршгурм шгурмгшмры ршырм "
-                    android:textColor="#ff474747"
-                    android:id="@+id/composite_correspondence_massage_input_massage"
-                    android:layout_gravity="left|center_vertical"/>
-        </LinearLayout>
+                    android:layout_below="@+id/composite_message_login"
+                    android:layout_alignLeft="@+id/composite_message_login"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/composite_message_text"
+                 />
+        </RelativeLayout>
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="17:35:28"
-                android:textColor="#ff8100"
-                android:id="@+id/composite_correspondence_massage_input_time"
-                android:layout_marginTop="5dp"
-                android:layout_gravity="center_horizontal|top"/>
-    </LinearLayout>
+
+   <RelativeLayout android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentRight="true"
+                   android:layout_alignBottom="@+id/composite_message_text_holder"
+                   android:id="@+id/composite_message_datetime_holder"
+                   android:paddingRight="5dp"
+                   android:paddingLeft="3dp"
+           >
+       <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:textColor="@color/Orange"
+               android:layout_marginLeft="3dp"
+               android:id="@+id/composite_message_date"
+               />
+       <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:textColor="@color/Orange"
+               android:layout_marginLeft="3dp"
+               android:id="@+id/composite_correspondence_massage_time"
+               android:layout_below="@+id/composite_message_date"
+               />
+   </RelativeLayout>
+
 </RelativeLayout>
