--- a/NewsTagil/src/main/res/layout/composite_message_out.xml
+++ b/NewsTagil/src/main/res/layout/composite_message_out.xml
@@ -1,48 +1,61 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#ece8e2"
+    android:layout_height="wrap_content"
+    android:background="@color/AppBackground"
    >
 
-
-    <TextView
+    <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="17:35:28"
-            android:textColor="#ff8100"
-            android:layout_marginLeft="10dp"
-            android:id="@+id/composite_correspondence_massage_output_time"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center_horizontal|top"/>
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/massage_bg"
-            android:layout_gravity="center_horizontal|top"
             android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/composite_message_datetime_holder"
+            android:id="@+id/composite_message_text_holder"
+            android:background="@drawable/massage_bg"
+            >
 
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:id="@+id/composite_message_login"
+                />
+
+        <ru.news.tagil.utility.myTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/composite_message_login"
+                android:layout_alignLeft="@+id/composite_message_login"
+                android:layout_marginTop="5dp"
+                android:id="@+id/composite_message_text"
+                />
+    </RelativeLayout>
+
+
+    <RelativeLayout android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignBottom="@+id/composite_message_text_holder"
+                    android:id="@+id/composite_message_datetime_holder"
+                    android:paddingRight="5dp"
+                    android:paddingLeft="3dp"
+            >
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Иван Бабайлов"
-                android:textColor="#ff474747"
-                android:layout_marginLeft="5dp"
-                android:id="@+id/composite_correspondence_massage_name_interlocutor"
-                android:layout_gravity="left|center_vertical"/>
-
+                android:textColor="@color/Orange"
+                android:layout_marginLeft="3dp"
+                android:id="@+id/composite_message_date"
+                />
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Рвломшв ш мырмм ымшг ыршмгр пм "
-                android:textColor="#ff474747"
-                android:id="@+id/composite_correspondence_massage"
-                android:layout_gravity="left|center_vertical"/>
-    </LinearLayout>
+                android:textColor="@color/Orange"
+                android:layout_marginLeft="3dp"
+                android:id="@+id/composite_correspondence_massage_time"
+                android:layout_below="@+id/composite_message_date"
+                />
+    </RelativeLayout>
 </RelativeLayout>
